--- a/Ejemplo_01/app/src/main/AndroidManifest.xml
+++ b/Ejemplo_01/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.CursoAndroid_07"
         tools:targetApi="31">
         <activity
-            android:name=".Calculadora"
+            android:name=".Calculator"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
